--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://paopaomale.github.io/homePage/manifest.plist</string>
+					<string>https://paopaomale.github.io/homePage/taobaobao.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
